# Capital-Planning-Agent

./: .env.example  .gitignore  .~lock.Principle Developer - Agentic AI Platform - Interview Assignment.docx#  CLAUDE.MD  CLINE.md  DESIGN.md  LICENSE  Principle Developer - Agentic AI Platform - Interview Assignment.docx  README.md  SETUP.md  TODO.md  main.py  pyproject.toml  requirements.txt  start_servers.py
.claude/: settings.local.json
agent/: __init__.py  agent_instruction.py  gradio_main.py  guardrails.py  langchain_structured_output_ref.md  main.py  requirements.txt  schemas.py
frontend/: app.js  chatbot.js  index.html  styles.css
guardrails/: README.md  __init__.py  example_usage.py  guardrail_middleware.py  guardrail_server.py  requirements.txt  test_detector.py
mcp_server/: README.md  __init__.py  api_client.py  config.py  main.py  models.py  requirements.txt  token_manager.py  tools.py
oidc_server/: README.md  __init__.py  config.py  jwt_utils.py  main.py  models.py
reference_docs/: MCP_CUSTOM_HEADERS_REF.MD  guardrail_middleware.py  langchain_custom_middleware_ref.md  mock_capital_planning_services_api_swagger.json
services/: auth.py  config.py  main.py  mock_data.py  models.py
